# humann3_tools

./: .gitignore  CLAUDE.md  ExampleFileList.txt  QSCCSampleKey20250225.csv  QSCFiles.txt  README.md  README.md.rej  README2.md  README_Modular.md  README_initial.md  THIRD_PARTY_LICENSES  TestKey.csv  TestScript.sh  ToDo.md  activate_env.sh  cli_example.py  conda_setup.py  conda_setup.sh  differential_abundance_gpt.py  humann3-tools-test-scripts.txt  humann3_cli.py  install-guide.md  install_guide.md  new_imports_fix.py  pyproject.toml  requirements.txt  setup.py  setup_redundant.py  stats_cli.py  test.log3  test.log4  test_imports.py  update_imports.py  updated-pyproject.txt  usage-guide.md  viz_cli.py
config/: default_config.json
humann3_tools/: ExampleLassoElasticNetPLS_predictors_of_metabolite.py  ToDo.md  __init__.py  cli.py  join_unstratify.py  kneaddata-cli.py  logger.py  main.py
humann3_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
humann3_tools/analysis/: __init__.py  differential_abundance.py  differential_abundance_cli.py  metadata.py  visualizations.py  visualize_cli.py
humann3_tools/cli/: diff_cli.py  humann3_cli.py  join_cli.py  kneaddata_cli.py  main_cli.py  main_cli_simple.py  stats_cli.py  viz_cli.py
humann3_tools/core/: __init__.py  humann3.py
humann3_tools/humann3/: __init__.py  debug-header-script.py  gene_processing.py  join_cli.py  pathway_processing.py
humann3_tools/humann3_tools/: __init__.py  cli.py  main.py
humann3_tools/humann3_tools/humann3/: gene_processing.py
humann3_tools/humann3_tools/preprocessing/: humann3_run.py  pipeline.py
humann3_tools/humann_tools/: __init__.py  cli.py  main.py  parallel.py
humann3_tools/humann_tools/humann3/: pathway_processing.py
humann3_tools/modular/: setup-script.py  stats-module.py
humann3_tools/preprocessing/: __init__.py  humann3_run.py  kneaddata.py  parallel.py  pipeline.py  preprocessing_cli.py
humann3_tools/utils/: __init__.py  cmd_utils.py  file_utils.py  input_handler.py  metadata_utils.py  resource_utils.py  sample_utils.py
humann3_tools_backup/: README.md  conda_setup.py  pyproject.toml  usage-guide.md
humann3_tools_backup/humann3_tools/: __init__.py  humann3_run_cli.py  metadata_collection.py
humann3_tools_backup/humann3_tools.egg-info/: PKG-INFO  SOURCES.txt
humann3_tools_backup/humann3_tools/analysis/: differential_abundance_cli.py  statistical.py
humann3_tools_backup/humann3_tools/humann3/: __init__.py
humann3_tools_backup/humann3_tools/preprocessing/: humann3_run.py
humann3_tools_backup/humann3_tools/utils/: __init__.py  file_utils.py
init/: cli_init.py
src/: __init__.py  main.py
src/humann3_tools/: __init__.py
src/humann3_tools/analysis/: __init__.py  metadata.py  statistical.py  visualizations.py
src/humann3_tools/cli/: __init__.py  __init__backupmain.py  diff_cli.py  humann3_cli.py  humann3_cli_fixed.py  humann3_cli_simple.py  humann3_cli_trying_to_fix_args_parser.py  join_cli.py  kneaddata_cli.py  main_cli.py  stats_cli.py  viz_cli.py
src/humann3_tools/core/: __init__.py  humann3.py  join_unstratify.py  kneaddata.py
src/humann3_tools/humann3/: __init__.py  gene_processing.py  join_unstratify.py  pathway_processing.py
src/humann3_tools/preprocessing/: __init__.py  humann3_run.py  kneaddata.py  pipeline.py
src/humann3_tools/utils/: cmd_utils.py  sample_utils.py
utils/: utils_init.py
utils/humann_tools/: resources_utils.py
